# OCR

./: .gitignore  README.md  component_terms.txt  main.py  pyproject.toml  run_streamlit.cmd  run_streamlit.ps1  speed.py  streamlit_app.py
circuit_ocr/: __init__.py  aliyun_ocr.py  cli.py  component_matcher.py  exporters.py  json_utils.py  llm.py  llm_components.py  models.py  pdf_render.py  postprocess.py  prompts.py  tiling.py
ocr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_aliyun_ocr.py  test_component_matcher.py  test_exporters.py  test_json_utils.py  test_llm.py  test_postprocess.py  test_tiling.py
