[project]
name = "ocr"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "alibabacloud-ocr-api20210707>=3.1.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "openpyxl>=3.1.0",
    "streamlit>=1.35.0",
]

[project.scripts]
circuit-ocr = "circuit_ocr.cli:main"

[tool.setuptools.packages.find]
include = ["circuit_ocr*"]
